changes made in html codes

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,22 +16,27 @@
 
   <body>
 
+    <nav>
   Services
   Product
   Vision
   Features
   About
   Contact
-
-  <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    </nav>
+  
+    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+  
+    <h1>
   Innovation
   On
   Demand
-
+    </h1>
   Get Started
 
   <img src="img/header-img.png" alt="Image of a code snippet.">
 
+ 
   Features
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
@@ -39,8 +44,12 @@
   About
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
+
+
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   
+
+  <section>
   Services
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
@@ -50,14 +59,19 @@
 
   Vision
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  </section>
 
+  <section>
+    <section id class=contact>
   Contact
   123 Way 456 Street
   Somewhere, USA
   1 (888) 888-8888
   sales@greatidea.io
+  </section>
 
+    <footer>
   Copyright Great Idea! 2018
-  
+    </footer>
   </body>
 </html>
