--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,22 +16,23 @@
 
   <body>
 
-    <nav>
-  Services
-  Product
-  Vision
-  Features
-  About
-  Contact
-    </nav>
+    <nav> 
+  <a href="#Services">Services</a>
+  <a href="#Product">Product</a>
+  <a href="#Vision">Vision</a>
+  <a href="#Features">Features</a>
+  <a href="#About">About</a>
+  <a href="#Contact">Contact</a>
   
     <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  
-    <h1>
+    </nav>
+
+    <header>
+      <h1>
   Innovation
   On
   Demand
-    </h1>
+      </h1>
   Get Started
 
   <img src="img/header-img.png" alt="Image of a code snippet.">
@@ -40,38 +41,58 @@
   Features
   Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
 
+  <section class="section1">
+    <div>
+    <div class="box">
+    <h3>Features</h3>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
 
-  About
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+    <div>
+    <div class="box">
+  <h3>About</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </section>
 
 
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   
+  <div>
+  <div class="box">
+  <section class="section2">
+  <h3>Services</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
 
-  <section>
-  Services
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <div>
+  <div class="box">
+  <h3>Product</h3>
+  <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
 
-
-  Product
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
-
-  Vision
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  <div>
+  <div class="box">
+  <h3>Vision</h3>
+  <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </div>
   </section>
 
   <section>
-    <section id class=contact>
-  Contact
+    <section class="contact">
+  <h3>Contact</h3>
+    <address>
   123 Way 456 Street
   Somewhere, USA
   1 (888) 888-8888
   sales@greatidea.io
+  </address>
   </section>
 
     <footer>
-  Copyright Great Idea! 2018
+  <p>Copyright Great Idea! 2018</p>
     </footer>
+
   </body>
 </html>
