changes made in CSS codes

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -16,30 +16,33 @@
 
   <body>
 
-    <nav> 
-  <a href="#Services">Services</a>
-  <a href="#Product">Product</a>
-  <a href="#Vision">Vision</a>
-  <a href="#Features">Features</a>
-  <a href="#About">About</a>
-  <a href="#Contact">Contact</a>
+  <nav> 
+    <a href="#">Services</a>
+    <a href="#">Product</a>
+    <a href="#">Vision</a>
+    <a href="#">Features</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </nav>
   
     <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    </nav>
+  
 
     <header>
       <h1>
-  Innovation
-  On
-  Demand
+        Innovation
+        On
+        Demand
       </h1>
-  Get Started
+      
+      <button>
+        Get Started
+      </button>
 
-  <img src="img/header-img.png" alt="Image of a code snippet.">
-
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    </header>
  
-  Features
-  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
+  
 
   <section class="section1">
     <div>
@@ -50,8 +53,8 @@
 
     <div>
     <div class="box">
-  <h3>About</h3>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    <h3>About</h3>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
     </div>
   </section>
 
