--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -13,79 +13,71 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-
   <body>
-
-  <nav> 
-    <a href="#">Services</a>
-    <a href="#">Product</a>
-    <a href="#">Vision</a>
-    <a href="#">Features</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
-  </nav>
-  
+      <header>
+        <nav> 
+    <a href="#Services">Services</a>
+    <a href="#Products">Products</a>
+    <a href="#Vision">Vision</a>
+    <a href="#Features">Features</a>
+    <a href="#About">About</a>
+    <a href="#Contact">Contact</a>
     <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-  
+        </nav>
+      </header>
 
-    <header>
+      <section class="title">
+      <div class = "slogan">
+
       <h1>
-        Innovation
-        On
+        Innovation <br>
+        On<br>
         Demand
       </h1>
-      
+       
       <button>
         Get Started
       </button>
-
+      <div class ="image">
       <img src="img/header-img.png" alt="Image of a code snippet.">
-    </header>
- 
-  
-
-  <section class="section1">
-    <div>
-    <div class="box">
-    <h3>Features</h3>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
     </div>
+  </section>
 
-    <div>
-    <div class="box">
+  <section id = "Features">
+  <h3>Features</h3>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </section>
+
+    <section id = "About">
     <h3>About</h3>
     <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </div>
-  </section>
+    </section>
 
-
-
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
-  
-  <div>
-  <div class="box">
-  <section class="section2">
-  <h3>Services</h3>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </div>
-
-  <div>
-  <div class="box">
-  <h3>Product</h3>
-  <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </div>
-
-  <div>
-  <div class="box">
-  <h3>Vision</h3>
-  <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </div>
-  </section>
 
   <section>
-    <section class="contact">
-  <h3>Contact</h3>
-    <address>
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  </section>
+
+  <section id = "Services">
+  <h3>Services</h3>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+
+  <section id = "Products">
+  <h3>Product</h3>
+  <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+
+  <section id = "Vision">
+  <h3>Vision</h3>
+  <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+   </section>
+
+  <section>
+    <section id="Contact">
+    <h3>Contact</h3>
+  <address>
   123 Way 456 Street
   Somewhere, USA
   1 (888) 888-8888
