--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -13,81 +14,98 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-  <body>
-      <header>
-        <nav> 
-    <a href="#Services">Services</a>
-    <a href="#Products">Products</a>
-    <a href="#Vision">Vision</a>
-    <a href="#Features">Features</a>
-    <a href="#About">About</a>
-    <a href="#Contact">Contact</a>
-    <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-        </nav>
-      </header>
 
-      <section class="title">
-      <div class = "slogan">
+<body>
+  <header>
+    <nav>
+      <a href="#services">Services</a>
+      <a href="#products">Products</a>
+      <a href="#vision">Vision</a>
+      <a href="#features">Features</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    </nav>
+  </header>
 
+  <section class='container'>
+    <div>
       <h1>
-        Innovation <br>
+        Innovation<br>
         On<br>
         Demand
       </h1>
-       
-      <button>
-        Get Started
-      </button>
-      <div class ="image">
-      <img src="img/header-img.png" alt="Image of a code snippet.">
-      </div>
+
+      <h2>Get Started</h2>
     </div>
+      <img src="img/header-img.png" alt="Image of a code snippet.">
+    
   </section>
 
-  <section id = "Features">
-  <h3>Features</h3>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+  <section class="sectionclass1">
+    <div class="div1">
+  <section id="features">
+    <h3>Features</h3>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+</div>
 
-    <section id = "About">
+<div class="div1">
+  <section id="about">
     <h3>About</h3>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-    </section>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+  </div>
+</section>
 
 
-  <section>
-  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  <section class="middle-img">
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   </section>
 
-  <section id = "Services">
-  <h3>Services</h3>
-  <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+
+  <section class="sectionclass2">
+      <div class="div2">
+  <section id="services">
+    <h3>Services</h3>
+    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </section>
+</div>
 
-  <section id = "Products">
-  <h3>Product</h3>
-  <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  <div class="div2">
+  <section id="products">
+    <h3>Product</h3>
+    <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
   </section>
+</div>
 
-  <section id = "Vision">
-  <h3>Vision</h3>
-  <p>  Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-   </section>
+  <div class="div2">
+  <section id="vision">
+    <h3>Vision</h3>
+    <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+  </section>
+</div>
+</section>
 
-  <section>
-    <section id="Contact">
+  <section id="contact">
     <h3>Contact</h3>
-  <address>
-  123 Way 456 Street
-  Somewhere, USA
-  1 (888) 888-8888
-  sales@greatidea.io
-  </address>
+    <address>
+      123 Way 456 Street<br>
+      Somewhere, USA<br>
+      1 (888) 888-8888<br>
+      sales@greatidea.io
+    </address>
   </section>
 
-    <footer>
-  <p>Copyright Great Idea! 2018</p>
-    </footer>
+  <footer>
+    <p>Copyright Great Idea! 2018</p>
+  </footer>
 
-  </body>
+</body>
+
 </html>
