all changes made

--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -36,29 +36,31 @@
         Demand
       </h1>
 
-      <h2>Get Started</h2>
+      <div class="boxed">
+        <h2>Get Started</h2>
+      </div>
     </div>
-      <img src="img/header-img.png" alt="Image of a code snippet.">
-    
+    <img src="img/header-img.png" alt="Image of a code snippet.">
+
   </section>
 
   <section class="sectionclass1">
     <div class="div1">
-  <section id="features">
-    <h3>Features</h3>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-</div>
+      <section id="features">
+        <h3>Features</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+    </div>
 
-<div class="div1">
-  <section id="about">
-    <h3>About</h3>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    <div class="div1">
+      <section id="about">
+        <h3>About</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+    </div>
   </section>
-  </div>
-</section>
 
 
   <section class="middle-img">
@@ -67,30 +69,30 @@
 
 
   <section class="sectionclass2">
-      <div class="div2">
-  <section id="services">
-    <h3>Services</h3>
-    <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-</div>
+    <div class="div2">
+      <section id="services">
+        <h3>Services</h3>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+    </div>
 
-  <div class="div2">
-  <section id="products">
-    <h3>Product</h3>
-    <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-  </section>
-</div>
+    <div class="div2">
+      <section id="products">
+        <h3>Product</h3>
+        <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+    </div>
 
-  <div class="div2">
-  <section id="vision">
-    <h3>Vision</h3>
-    <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
-      Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    <div class="div2">
+      <section id="vision">
+        <h3>Vision</h3>
+        <p> Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+    </div>
   </section>
-</div>
-</section>
 
   <section id="contact">
     <h3>Contact</h3>
